tests/test_cqasm_v1.0/valid/structure/just_version_comments_and_qubits.qasm
version 1.0
# this is a comment
qubits 10
