tests/test_cqasm_v1.0/invalid/qubits_twice.qasm
version 1.0
qubits 10
qubits 10

display